@@ -1,3 +1,9 @@
+2010-05-31  Jiro SEKIBA <jir@unicus.jp>
+
+	* include/grub/disk.h (GRUB_DISK_SIZE_UNKNOWN): New macro.
+	* fs/nilfs.c: Support 2nd super block in case 1st one is accidently
+	corrupted or not synced properly.
+
 2010-05-31  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* normal/main.c (grub_normal_add_menu_entry): Avoid going out of args.
